--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,17 @@
+<h1>user info</h1>
+<div>
+
+  <%= image_tag @user.get_profile_image(100,100) %>
+  <h3>name：<%= @user.name %></h3>
+  <!--<h3><#%= @user.introduction %></h3>-->
+
+  <% if @user == current_user %>
+  <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
+  <% end %>
+</div>
+
+
+
 <h1>New book</h1>
   <%= form_with model: @book do |f| %>
     <h4>Title</h4>
@@ -6,3 +20,13 @@
       <%= f.text_area :body %>
     <%= f.submit 'Create Book' %>
   <% end %>
+
+<% @books.each do |book| %>
+<div>
+  <!--<%#= image_tag book.get_image %>-->
+  <!--<p>投稿ユーザー画像：<%#= image_tag 'sample-author1.jpg' %></p>-->
+  <p>Title：<%= book.title %></p>
+  <p>Opinion：<%= book.body %></p>
+  <p>ユーザーネーム：<%= book.user.name %></p>
+</div>
+<% end %>
