--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,28 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h1>user info</h1>
+<div>
+
+  <%= image_tag @user.get_profile_image(100,100) %>
+  <h3>name：<%= @user.name %></h3>
+  <!--<h3>< %= @user.introduction %></h3>-->
+
+  <% if @user == current_user %>
+  <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
+  <% end %>
+</div>
+
+
+<h1>New book</h1>
+  <%= form_with model: @book do |f| %>
+    <h4>Title</h4>
+      <%= f.text_field :title %>
+    <h4>Opinion</h4>
+      <%= f.text_area :body %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
+
+<h1>Book detail</h1>
+<%= @user.name %>
+<%= @book_id.title %>
+<%= @book_id.body %>
+
+
