--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,32 +1,85 @@
-<h1>user info</h1>
-<div>
 
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <h3>name：<%= @user.name %></h3>
-  <!--<h3><#%= @user.introduction %></h3>-->
+<div class="row">
+  <div class="col-md-3">
+     <h2>User info</h2>
+    <%= image_tag @user.get_profile_image(100,100) %>
 
-  <% if @user == current_user %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
-  <% end %>
-</div>
+    <table class="table">
+      <tbody>
+      <tr>
+    	  <th>name：<%= @user.name %></th>
+      </tr>
+      <tr>
+    	  <th>introduction</th>
+    	  <th><%= @user.introduction %></th>
+      </tr>
+    </tbody>
+    </table>
 
+    <div class="row">
+        <%= link_to edit_user_path(current_user.id),class: "btn btn-outline-secondary btn-block" do %>
+        <i class= "fas fa-user-cog"></i>
+        <% end %>
+    </div>
 
+    <h2 class="mt-3">New book</h2>
+    <%= form_with model: @book do |f| %>
+    <div class="form-group">
+          <br>
+          <label for="book_title">Title</label>
+          </br>
+        <%= f.text_field :title  %>
+    </div>
 
-<h1>New book</h1>
-  <%= form_with model: @book do |f| %>
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
+    <div class="form-group">
+      <br><label for="book_opinion">Opinion</label></br>
       <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
+    </div>
+    <div class="form-group">
+      <%= f.submit 'Create Book' %>
+    </div>
+    <% end %>
 
-<% @books.each do |book| %>
-<div>
-  <!--<%#= image_tag book.get_image %>-->
-  <!--<p>投稿ユーザー画像：<%#= image_tag 'sample-author1.jpg' %></p>-->
-  <p>Title：<%= book.title %></p>
-  <p>Opinion：<%= book.body %></p>
-  <p>ユーザーネーム：<%= book.user.name %></p>
+  </div>
+
+  <div class="col-md-8 offset-md-1">
+    <h2>Books</h2>
+    <table class="table table-hover table-inverse">
+      <thead>
+        <tr>
+          <th>Images</th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+
+          <% @books.each do |book| %>
+          <tr>
+             <td>
+                  <%= link_to user_path(@user.id) do %>
+                  <%= image_tag book.user.get_profile_image(100,100) %></p>
+                  <% end %>
+               </br>
+             </td>
+
+            <td>
+              <%= link_to book_path(book.id) do %>
+                <%= book.title %>
+              <% end %>
+
+            </td>
+            <td>
+                <%= book.body %>
+            </td>
+            </tr>
+          <% end %>
+
+
+      </tbody>
+    </table>
+
+ </div>
+
 </div>
-<% end %>
