--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,28 +1,97 @@
-<h1>user info</h1>
-<div>
 
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <h3>name：<%= @user.name %></h3>
-  <!--<h3>< %= @user.introduction %></h3>-->
+<div class="row">
+  <div class="col-md-3">
+     <h2>User info</h2>
+    <%= image_tag @user.get_profile_image(100,100) %>
 
-  <% if @user == current_user %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
-  <% end %>
-</div>
+    <table class="table">
+      <tbody>
+      <tr>
+    	  <th>name：<%= @user.name %></th>
+      </tr>
+      <tr>
+    	  <th>introduction</th>
+    	  <th><%= @user.introduction %></th>
+      </tr>
+    </tbody>
+    </table>
 
+    <div class="row">
+        <%= link_to edit_user_path(current_user.id),class: "btn btn-outline-secondary btn-block" do %>
+        <i class= "fas fa-user-cog"></i>
+        <% end %>
+    </div>
 
-<h1>New book</h1>
-  <%= form_with model: @book do |f| %>
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
+    <h2 class="mt-3">New book</h2>
+    <%= form_with model: @book do |f| %>
+    <div class="form-group">
+          <br>
+          <label for="book_title">Title</label>
+          </br>
+        <%= f.text_field :title  %>
+    </div>
+
+    <div class="form-group">
+      <br><label for="book_opinion">Opinion</label></br>
       <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
+    </div>
+    <div class="form-group">
+      <%= f.submit 'Create Book' %>
+    </div>
+    <% end %>
 
-<h1>Book detail</h1>
-<%= @user.name %>
-<%= @book_id.title %>
-<%= @book_id.body %>
+  </div>
 
+  <div class="col-md-8 offset-md-1">
+    <h2>Books</h2>
+    <table class="table table-hover table-inverse">
+      <thead>
+        <tr>
+          <th>Images</th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+
+          <td>
+            <%= link_to user_path(@user.id) do %>
+              <%= image_tag @user.get_profile_image(100,100) %>
+              <br>
+              <%= @user.name %>
+              <br>
+            <% end %>
+          </td>
+
+          <td>
+            <%= @book_id.title %>
+          </td>
+          <td>
+            <%= @book_id.body %>
+          </td>
+
+          <td>
+            <% if @user == current_user %>
+              <%= link_to edit_book_path(@book_id.id),class: "btn btn-sm btn-success" do %>
+                <i>Edit</i>
+              <% end %>
+            <% end %>
+
+            <% if @user == current_user %>
+              <%= link_to book_path(@book_id.id), class: "btn btn-sm btn-danger", method: :delete  do%>
+                <i>Destroy</i>
+              <% end %>
+            <% end %>
+          </td>
+
+        </tr>
+
+      </tbody>
+    </table>
+
+    </div>
+
+</div>
 
