--- a/app/views/homes/testtest.html.erb
+++ b/app/views/homes/testtest.html.erb
@@ -8,12 +8,12 @@
 
 
             <div class="form-group">
-              <br><label for="inputName">Title</label></br>
+              <label for="inputName">Title</label>
               <%= f.text_field :title, autofocus: true, id:"inputName", placeholder:"名前"%>
             </div>
 
             <div class="form-group">
-              <br><label for="inputName">Opinion</label><br>
+              <label for="inputName">Opinion</label>
               <%= f.text_field :body, autofocus: true, id:"inputName", placeholder:"名前"%>
             </div>
 
@@ -22,11 +22,9 @@
             </div>
 
       <% end %>
-      <%= link_to "Show", book_path(@book) %>
-       |
-      <%= link_to "Back", books_path %>
       </div>
-
+      <%= link_to "Show", book_path(@book) %>
+      <%= link_to "Back", books_path %>
 
       </div>
       </div>
