--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,35 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<main>
+  <p id="notice"></p>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+         <h2>User info</h2>
+         <%= form_with model: @user do |f| %>
+
+
+            <div class="form-group">
+             <br> <label for="inputName">Name</label></br>
+              <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+            </div>
+
+            <div class="form-group">
+              <br><label for="inputImage">Image</label></br>
+              <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+            </div>
+
+            <div class="form-group">
+              <br><label for="inputIntroduction">Introduction</label></br>
+              <%= f.text_area :introduction%>
+            </div>
+
+            <div class="form-group">
+              <%= f.submit "Update User" %>
+            </div>
+
+      <% end %>
+
+      </div>
+
+      </div>
+      </div>
+</main>
