--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,82 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+
+<div class="row">
+  <div class="col-md-3">
+     <h2>User info</h2>
+    <%= image_tag @user.get_profile_image(100,100) %>
+
+    <table class="table">
+      <tbody>
+      <tr>
+    	  <th>name：<%= @user.name %></th>
+      </tr>
+      <tr>
+    	  <th>introduction</th>
+    	  <th><%= @user.introduction %></th>
+      </tr>
+    </tbody>
+    </table>
+
+    <div class="row">
+        <%= link_to edit_user_path(current_user.id),class: "btn btn-outline-secondary btn-block" do %>
+        <i class= "fas fa-user-cog"></i>
+        <% end %>
+    </div>
+
+    <h2 class="mt-3">New book</h2>
+    <%= form_with model: @book do |f| %>
+    <div class="form-group">
+          <br>
+          <label for="book_title">Title</label>
+          </br>
+        <%= f.text_field :title  %>
+    </div>
+
+    <div class="form-group">
+      <br><label for="book_opinion">Opinion</label></br>
+      <%= f.text_area :body %>
+    </div>
+    <div class="form-group">
+      <%= f.submit 'Create Book' %>
+    </div>
+    <% end %>
+
+  </div>
+
+  <div class="col-md-8 offset-md-1">
+    <h2>Books</h2>
+    <table class="table table-hover table-inverse">
+      <thead>
+        <tr>
+          <th>Images</th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+
+      <% @users.each do |user| %>
+          <tr>
+             <td>
+                  <%= link_to user_path(@user.id) do %>
+                  <%= image_tag user.get_profile_image(100,100) %></p>
+                  <% end %>
+               </br>
+             </td>
+
+            <td>
+                <%= user.name %>
+            </td>
+            <td>
+                <%= link_to "Show", user_path(user.id)  %>
+            </td>
+            </tr>
+       <% end %>
+
+
+      </tbody>
+    </table>
+
+ </div>
+
+</div>
