--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,11 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>error prohibited this obj from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <div class="row">
   <div class="col-md-3">
@@ -35,9 +43,9 @@
       <br><label for="book_opinion">Opinion</label></br>
       <%= f.text_area :body %>
     </div>
-    <div class="form-group">
+
       <%= f.submit 'Create Book' %>
-    </div>
+
     <% end %>
 
   </div>
