--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,17 @@
+
 <main>
   <p id="notice"></p>
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+          <% if @user.errors.any? %>
+            <%= @user.errors.count %>error prohibited this obj from being saved:
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+                <><%= message %></li>
+              <% end %>
+          <% end %>
+
          <h2>User info</h2>
          <%= form_with model: @user do |f| %>
 
