--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -35,21 +35,19 @@
       <br><label for="book_opinion">Opinion</label></br>
       <%= f.text_area :body %>
     </div>
-    <div class="form-group">
+
       <%= f.submit 'Create Book' %>
-    </div>
     <% end %>
 
   </div>
 
   <div class="col-md-8 offset-md-1">
-    <h2>Books</h2>
+    <h2>Users</h2>
     <table class="table table-hover table-inverse">
       <thead>
         <tr>
           <th>Images</th>
-          <th>Title</th>
-          <th>Opinion</th>
+          <th>Name</th>
           <th colspan="3"></th>
         </tr>
       </thead>
