--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<%= flash[:notice] %>
+
 
 <div class="row">
   <div class="col-md-3">
@@ -35,14 +37,15 @@
       <br><label for="book_opinion">Opinion</label></br>
       <%= f.text_area :body %>
     </div>
-    <div class="form-group">
+
       <%= f.submit 'Create Book' %>
-    </div>
+
     <% end %>
 
   </div>
 
   <div class="col-md-8 offset-md-1">
+
     <h2>Books</h2>
     <table class="table table-hover table-inverse">
       <thead>
