--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,6 +7,10 @@
   </ul>
 <% end %>
 
+<div class="container">
+
+
+
 <div class="row">
   <div class="col-md-3">
      <h2>User info</h2>
@@ -90,4 +94,5 @@
 
  </div>
 
+</div>
 </div>
