--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
             <li class="nav-item">
               <%= link_to user_path(current_user.id), class: 'nav-link text-dark'  do %>
-              <i class="fas fa-home"></i> <i>home</i>
+              <i class="fas fa-home"></i> <i>Home</i>
               <% end %>
 
             </li>
@@ -55,11 +55,11 @@
 
             <li class="nav-item">
               <%= link_to "/", class: 'nav-link text-dark' do %>
-              <i class="fas fa-home"></i> <i>home</i>
+              <i class="fas fa-home"></i> <i>Home</i>
               <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "/homes/about", class: 'nav-link text-dark' do %>
+              <%= link_to "/home/about", class: 'nav-link text-dark' do %>
               <i class="fas fa-link"></i> <i>About</i>
              <% end %>
             </li>
