--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <%= flash[:notice] %>
+<div class="container">
+
 
 
 <div class="row">
@@ -19,7 +21,7 @@
     </table>
 
     <div class="row">
-        <%= link_to edit_user_path(current_user.id),class: "btn btn-outline-secondary btn-block" do %>
+        <%= link_to edit_user_path(current_user),class: "btn btn-outline-secondary btn-block" do %>
         <i class= "fas fa-user-cog"></i>
         <% end %>
     </div>
@@ -83,4 +85,5 @@
 
  </div>
 
+</div>
 </div>
