--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,20 @@
 
+
 <main>
   <p id="notice"></p>
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
          <h2>Editing Book</h2>
+
+         <% if @book.errors.any? %>
+            <%= @book.errors.count %>error prohibited this obj from being saved:
+            <ul>
+              <% @book.errors.full_messages.each do |message| %>
+                <%= message %>
+              <% end %>
+          <% end %>
+
          <%= form_with model: @book do |f| %>
 
 
