--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,7 @@
 <%= flash[:notice] %>
+<div class="container">
+
+
 <div class="row">
   <div class="col-md-3">
      <h2>User info</h2>
@@ -41,7 +44,7 @@
   </div>
 
   <div class="col-md-8 offset-md-1">
-    <h2>Books</h2>
+    <h2>Book detail</h2>
     <table class="table table-hover table-inverse">
       <thead>
         <tr>
@@ -72,16 +75,20 @@
 
           <td>
             <% if @user == current_user %>
-              <%= link_to edit_book_path(@book_id.id),class: "btn btn-sm btn-success" do %>
+              <%= link_to edit_book_path(@book_id),class: "btn btn-sm btn-success" do %>
+
                 <i>Edit</i>
               <% end %>
-            <% end %>
 
-            <% if @user == current_user %>
-              <%= link_to book_path(@book_id.id), class: "btn btn-sm btn-danger", method: :delete  do%>
+              <%= link_to book_path(@book_id), class: "btn btn-sm btn-danger", method: :delete  do%>
                 <i>Destroy</i>
               <% end %>
+
             <% end %>
+
+
+
+
           </td>
 
         </tr>
@@ -91,5 +98,6 @@
 
     </div>
 
+</div>
 </div>
 
