--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
 <div class="row">
   <div class="col-md-3">
      <h2>User info</h2>
@@ -55,20 +55,15 @@
 
       <% @users.each do |user| %>
           <tr>
-             <td>
-                  <%= link_to user_path(@user.id) do %>
-                  <%= image_tag user.get_profile_image(100,100) %></p>
-                  <% end %>
-               </br>
-             </td>
 
-            <td>
-                <%= user.name %>
-            </td>
-            <td>
-                <%= link_to "Show", user_path(user.id)  %>
-            </td>
-            </tr>
+                  <%= link_to user_path(user) do %>
+                  <td><%= image_tag user.get_profile_image(100,100) %></p></td>
+
+               </br>
+                  <td> <%= user.name %></td>
+                  <td><%= link_to "Show", user_path(user.id)  %></td>
+                 <% end %>
+          </tr>
        <% end %>
 
 
@@ -76,5 +71,7 @@
     </table>
 
  </div>
+
+</div>
 
 </div>
