--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -70,7 +70,7 @@
           <% @books.each do |book| %>
           <tr>
              <td>
-                  <%= link_to user_path(@user.id) do %>
+                  <%= link_to user_path(book.user) do %>
                   <%= image_tag book.user.get_profile_image(100,100) %></p>
                   <% end %>
                </br>
