--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -70,7 +70,9 @@
              </td>
 
             <td>
+                <%= link_to book_path(book.id) do %>
                 <%= book.title %>
+                <% end %>
 
             </td>
             <td>
